tests/snapshots/tui_snapshot__tui_assistant_with_thinking.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>
















  Thinking: Reasoning details here.

  ● Answer text.
  ╭ default · think off · Enter send · \+Enter newline · @file context ──────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Ctrl+C quit
