tests/snapshots/tui_snapshot__tui_footer_with_usage.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  mode: default



      Usage sample.















  ╭ think off · Enter send · \+Enter newline · @file context ────────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯
  snapshot-fixture  |  120/45 tokens ($0.0030)  |  Ctrl+C quit
