tests/snapshots/tui_snapshot__tui_header_quiet_startup.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  Kode (dummy/dummy-model)  <cwd>  mode: default
  ctrl+l: model  ctrl+o: tools  shift+tab: mode  /help
  0 skills  0 prompts  0 themes  0 extensions  (0 resources ready)

  ╭──────────────────────────────────────────────────────────────────────────╮
  │ Ask for a change, paste an error, or drag files here.                    │
  │ /help commands   @file attach context   Shift+Tab mode   Ctrl+L model    │
  │ Start with a plan: "inspect this repo and propose the smallest safe fix" │
  ╰──────────────────────────────────────────────────────────────────────────╯
  ╭ think off ───────────────────────────────────────────────────────────────╮
  │ > Type a message... (/help, /exit)                                       │
  ╰──────────────────────────────────────────────────────────────────────────╯

  <cwd>  |  0/0 tokens  |  Persist: balanced  |  /help  |  Ctrl+C...
