tests/snapshots/tui_snapshot__tui_input_bash_mode.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>  mode: default
  ctrl+l: model  ctrl+o: tools  shift+tab: mode  /help














  ╭──────────────────────────────────────────────────────────────────────────╮
  │ Welcome to KESA!                                                         │
  │ Ask for a change, paste an error, or drag files here.                    │
  ╰──────────────────────────────────────────────────────────────────────────╯
  ╭ bash · think off · Enter send · \+Enter newline · @file context ─────────╮
  │ > !ls -la                                                                │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Persist: balanced  |  Ctrl+C quit
