tests/snapshots/tui_snapshot__tui_input_multi_line.snap
---
source: tests/tui_snapshot.rs
expression: view
---
  KESA (dummy/dummy-model)  <cwd>
  ctrl+l: model  ctrl+o: detail  shift+tab: mode  /help













  ╭──────────────────────────────────────────────────────────────────────────╮
  │ Welcome to KESA!                                                         │
  │ Ask for a change, paste an error, or drag files here.                    │
  ╰──────────────────────────────────────────────────────────────────────────╯
  ╭ default · think off · Enter send · \+Enter newline · @file context ──────╮
  │ > first line                                                             │
  │   second line                                                            │
  ╰──────────────────────────────────────────────────────────────────────────╯
  Tokens: 0 in / 0 out  |  Ctrl+C quit
